Fix Review page searchbar spacing.

--- a/app/(main)/review/page.css
+++ b/app/(main)/review/page.css
@@ -5,7 +5,8 @@
 }
 
 .review-dropdown-container {
-  max-width: 500px;
+  width: 100%;
+  max-width: 750px;
   margin-top: 3rem;
   margin-left: 5.5rem;
   margin-bottom: 11rem;
